Add performance and system design